--- a/themes.html
+++ b/themes.html
@@ -23,9 +23,9 @@
     </div>
     <nav class="nav">
       <a href="index.html">Home</a>
+      <a href="details.html">Details</a>
       <a href="themes.html" class="active">Themes</a>
-      <a href="index.html#album">Gallery</a>
-      <a href="index.html#about">About</a>
+      <a href="gift.html">Gift</a>
     </nav>
     <div class="header-actions">
       <div class="theme-pill" id="themeLabel">Default</div>
