Make gift popup less intrusive and add mirrored banners

--- a/gift.html
+++ b/gift.html
@@ -11,7 +11,8 @@
 </head>
 <body class="theme-christmas gift-page">
   <div id="overlayContainer" class="overlay-container" aria-hidden="true"></div>
-  <div id="sideWreath" class="side-wreath" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--left" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--right" aria-hidden="true"></div>
 
   <main class="gift-shell">
     <div class="gift-card glass">
