--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <body class="theme-christmas">
   <div id="overlayContainer" class="overlay-container" aria-hidden="true"></div>
-  <div id="sideWreath" class="side-wreath" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--left" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--right" aria-hidden="true"></div>
 
   <header class="site-header glass minimal-header">
     <div class="brand">
       <div class="brand-mark"></div>
       <div class="brand-text">
-        <span class="brand-title">Holiday Landing</span>
+        <span class="brand-title">Mai Ahn Nguyens fanpage</span>
       </div>
     </div>
     <nav class="nav">
@@ -44,7 +45,7 @@
   </main>
 
   <div class="gift-modal" id="giftModal" role="dialog" aria-modal="true" aria-labelledby="giftModalTitle" hidden>
-    <div class="gift-modal__content glass">
+    <div class="gift-modal__content gift-modal__content--flash">
       <h2 id="giftModalTitle">click now for you gift!!</h2>
       <a class="pill" href="gift.html">Open your gift</a>
     </div>
