--- a/themes.html
+++ b/themes.html
@@ -11,7 +11,8 @@
 </head>
 <body class="theme-default">
   <div id="overlayContainer" class="overlay-container" aria-hidden="true"></div>
-  <div id="sideWreath" class="side-wreath" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--left" aria-hidden="true"></div>
+  <div class="side-wreath side-wreath--right" aria-hidden="true"></div>
 
   <header class="site-header glass">
     <div class="brand">
