Add trip itinerary page and document scripts

--- a/gift.html
+++ b/gift.html
@@ -19,6 +19,7 @@
       <h1>YOU HAVE WON AN ALL INCLUSIVE ROUND TRIP TO ASIA</h1>
       <p class="fine-print">redeem with 10 kisses</p>
       <a class="pill" href="index.html">Back to home</a>
+      <a class="pill pill--accent" href="itinerary.html">Trip Itenerary</a>
     </div>
   </main>
 
